added team section

--- a/index.html
+++ b/index.html
@@ -104,11 +104,11 @@
       </div>
       <!-- slider 2 -->
       <div id="slide2"
-        class="carousel-item relative w-full bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.5)),url(./images/banner2.png)] h-[60vh]">
+        class="carousel-item relative w-full bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.5)),url(./images/banner2.png)] bg-cover h-[60vh]">
         <!-- <img
           src="./images/banner2.png"
           class="w-full " /> -->
-        <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between items-center  ">
+        <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between items-center  bg-conver bg-center">
           <a href="#slide1" class="btn btn-circle">❮</a>
           <div class="text-white max-w-[550px] mx-auto text-center space-y-5 py-10">
             <h1 class="lg:text-5xl   font-bold">2mExotic tastes at your doorstep</h1>
@@ -120,7 +120,7 @@
       </div>
       <!-- slider 3 -->
       <div id="slide3"
-        class="carousel-item relative w-full bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.5)),url(./images/banner2.png)] ">
+        class="carousel-item relative w-full bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.5)),url(./images/banner3.png)] bg-center bg-cover">
 
         <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between items-center">
           <a href="#slide2" class="btn btn-circle">❮</a>
@@ -134,7 +134,7 @@
       </div>
       <!-- slider 4 -->
       <div id="slide4"
-        class="carousel-item relative w-full bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.5)),url(./images/banner4.png)]">
+        class="carousel-item relative w-full bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.5)),url(./images/banner4.png)] bg-center bg-cover">
 
         <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between items-center py-10">
           <a href="#slide3" class="btn btn-circle">❮</a>
@@ -455,6 +455,93 @@
         </div>
       </div>
       </section>
+
+      <!-- chose us section -->
+       <section class="max-w-7xl mx-auto text-center space-y-10 my-24 lg:px-0 px-10">
+        <h1 class="text-3xl text-black font-bold">Why Choose Us</h1>
+        <p class="max-w-[600px] mx-auto">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+
+        <!-- choose container  -->
+         <div class="flex lg:flex-row flex-col gap-16">
+          <!-- flex start -->
+          <div class="flex-1 space-y-9">
+            <!-- box -->
+            <div class="flex lg:flex-row  text-left gap-3">
+             <div class="bg-[#e7e7e7] rounded-full p-7 h-3 w-3 flex justify-center items-center">
+              <i class="fa-regular fa-user fa-sm"></i>
+             </div>
+             <div class="space-y-2">
+              <h1 class="text-base font-bold">Dedicated Team</h1>
+              <hr class="max-w-[100px] ">
+              <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+             </div>
+            </div>
+            <div class="flex text-left gap-3">
+             <div class="bg-[#e7e7e7] rounded-full p-7 h-3 w-3 flex justify-center items-center">
+              <i class="fa-regular fa-user fa-sm"></i>
+             </div>
+             <div class="space-y-2">
+              <h1 class="text-base font-bold">Dedicated Team</h1>
+              <hr class="max-w-[100px] ">
+              <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+             </div>
+            </div>
+            <div class="flex text-left gap-3">
+             <div class="bg-[#e7e7e7] rounded-full p-7 h-3 w-3 flex justify-center items-center">
+              <i class="fa-regular fa-user fa-sm"></i>
+             </div>
+             <div class="space-y-2">
+              <h1 class="text-base font-bold">Dedicated Team</h1>
+              <hr class="max-w-[100px] ">
+              <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+             </div>
+            </div>
+          </div>
+          
+          <!-- flex middle -->
+          <div class="flex-1">
+            <img src="./images/whychoose1.png" alt="">
+          </div>
+          <!--  flex end -->
+          <div class="flex-1 space-y-9 lg:text-right ">
+            <!-- box 1-->
+            <div class="flex lg:flex-row-reverse flex-col items-center gap-3">
+             <div class="bg-[#e7e7e7] rounded-full p-7 h-3 w-3 flex justify-center items-center">
+              <i class="fa-regular fa-user fa-sm"></i>
+             </div>
+             <div class="space-y-2 lg:text-right text-center">
+              <h1 class="text-base font-bold">Dedicated Team</h1>
+              <hr class="max-w-[100px] lg:ml-52 ml-20 ">
+              <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+             </div>
+            </div>
+            <!-- box-2 -->
+            <div class="flex lg:flex-row-reverse flex-col items-center gap-3">
+              <div class="bg-[#e7e7e7] rounded-full p-7 h-3 w-3 flex justify-center items-center">
+               <i class="fa-regular fa-user fa-sm"></i>
+              </div>
+              <div class="space-y-2 lg:text-right text-center">
+               <h1 class="text-base font-bold">Dedicated Team</h1>
+               <hr class="max-w-[100px] lg:ml-52 ml-20 ">
+               <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+              </div>
+             </div>
+            <!-- end box 3 -->
+            <div class="flex lg:flex-row-reverse flex-col items-center gap-3">
+              <div class="bg-[#e7e7e7] rounded-full p-7 h-3 w-3 flex justify-center items-center">
+               <i class="fa-regular fa-user fa-sm"></i>
+              </div>
+              <div class="space-y-2 lg:text-right text-center">
+               <h1 class="text-base font-bold">Dedicated Team</h1>
+               <hr class="max-w-[100px] lg:ml-52 ml-20 ">
+               <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+              </div>
+             </div>
+            
+          </div>
+         </div>
+
+       </section>
   </main>
 
 
