--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
 
     <!-- team review section  -->
     <section>
-      <div class="hero min-h-screen rounded-lg" style="background-image: url(./images/banner1.png);">
+      <div class="hero min-h-[80vh] rounded-lg" style="background-image: url(./images/banner1.png);">
         <div class="hero-overlay bg-opacity-60 rounded-lg"></div>
         <div class="hero-content text-neutral-content text-center flex-col">
           <div class="max-w-md">
