--- a/index.html
+++ b/index.html
@@ -43,27 +43,25 @@
 </head>
 
 <body class="font-inter ">
-  <header class="max-w-7xl mx-auto ">
+  <header class="max-w-7xl mx-auto h-[100vh]">
     <!-- navbar -->
-
-    <!-- nav 2 -->
     <nav class="navbar bg-color-primary rounded-full my-10 p-5 flex-row lg:flex-row justify-between ">
       <div class="navbar-start w-full lg:justify-start justify-start">
         <div class="dropdown">
           <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-gray-800" fill="none" viewBox="0 0 24 24"
               stroke="currentColor">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" />
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /> 
             </svg>
           </div>
-          <ul tabindex="0" class="menu menu-sm dropdown-content mew rounded-box z-[1] mt-3 w-52 p-2 shadow">
+          <ul tabindex="0" class="menu menu-sm dropdown-content bg-white rounded-box z-[1] mt-3 w-52 p-2 ">
             <li><a href="">Home</a></li>
             <li><a href="">About</a></li>
             <li><a href="">Shop</a></li>
             <li><a href="">All Fruits</a></li>
           </ul>
         </div>
-        <!-- visible part -->
+        <!-- flex start -->
         <div class="navbar-start hidden lg:flex w-full">
           <ul class="menu menu-horizontal px-1 text-white">
             <li><a href="">Home</a></li>
@@ -74,83 +72,65 @@
         </div>
       </div>
 
-      <!-- second part -->
+      <!-- flex middle -->
       <div class="flex items-center gap-2 w-full">
         <img src="./images/logo.png" alt="">
         <h1 class="lg:text-2xl text-base lg:text-white text-gray-800 font-normal">Fruit Brust</h1>
       </div>
-
+      <!-- flex end -->
       <div class="navbar-end bg-white p-3 rounded-full hidden lg:flex">
         <input class="bg-transparent outline-none" type="text" name="" id="" placeholder="Secrch here">
         <button><i class="fa-solid fa-magnifying-glass fa-sm"></i></button>
       </div>
     </nav>
-    <!-- carosel -->
-    <div class="carousel w-full z-10 relative">
-      <!-- slider 1 -->
-      <div id="slide1"
-        class="carousel-item relative w-full  bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.5)),url(./images/banner2.png)] h-[60vh]">
-        <img src="./images/banner1.png" class="w-full " />
-
-        <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between items-center">
+    <div class="carousel w-full">
+      <div id="slide1" class="carousel-item relative w-full bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.1)),url(./images/banner1.png)] h-[60vh] flex items-center justify-center bg-center bg-cover">
+        <div class="text-white  mx-auto text-center space-y-5 py-10">
+          <h1 class="lg:text-5xl text-3xl font-bold">1Exotic tastes at your doorstep</h1>
+          <p class="w-2/3 mx-auto">We supply highly quality organic products</p>
+          <button class="bg-color-primary py-3 px-5 rounded-lg">Shop Now</button>
+        </div>
+        <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
           <a href="#slide4" class="btn btn-circle">❮</a>
-          <div class="text-white w-[550px] mx-auto text-center space-y-5 py-10">
-            <h1 class="lg:text-5xl  font-bold">1Exotic tastes at your doorstep</h1>
-            <p>We supply highly quality organic products</p>
-            <button class="bg-color-primary py-3 px-5 rounded-lg">Shop Now</button>
-          </div>
-          <a href="#slide2" class="btn btn-circle ">❯</a>
+          <a href="#slide2" class="btn btn-circle">❯</a>
         </div>
       </div>
-      <!-- slider 2 -->
-      <div id="slide2"
-        class="carousel-item relative w-full bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.5)),url(./images/banner2.png)] bg-cover h-[60vh]">
-        <!-- <img
-          src="./images/banner2.png"
-          class="w-full " /> -->
-        <div
-          class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between items-center  bg-conver bg-center">
+      <div id="slide2" class="carousel-item relative w-full bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.2)),url(./images/banner2.png)] h-[60vh] flex items-center justify-center bg-center bg-cover">
+        <div class="text-white  mx-auto text-center space-y-5 py-10">
+          <h1 class="lg:text-5xl text-3xl font-bold">1Exotic tastes at your doorstep</h1>
+          <p class="w-2/3 mx-auto">We supply highly quality organic products</p>
+          <button class="bg-color-primary py-3 px-5 rounded-lg">Shop Now</button>
+        </div>
+        <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
           <a href="#slide1" class="btn btn-circle">❮</a>
-          <div class="text-white max-w-[550px] mx-auto text-center space-y-5 py-10">
-            <h1 class="lg:text-5xl   font-bold">2mExotic tastes at your doorstep</h1>
-            <p>We supply highly quality organic products</p>
-            <button class="bg-color-primary py-3 px-5 rounded-lg">Shop Now</button>
-          </div>
           <a href="#slide3" class="btn btn-circle">❯</a>
         </div>
       </div>
-      <!-- slider 3 -->
-      <div id="slide3"
-        class="carousel-item relative w-full bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.5)),url(./images/banner3.png)] bg-center bg-cover">
-
-        <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between items-center">
+      <div id="slide3" class="carousel-item relative w-full bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.1)),url(./images/banner3.png)] h-[60vh] flex items-center justify-center bg-center bg-cover">
+        <div class="text-white  mx-auto text-center space-y-5 py-10">
+          <h1 class="lg:text-5xl text-3xl  font-bold">1Exotic tastes at your doorstep</h1>
+          <p class="w-2/3 mx-auto">We supply highly quality organic products</p>
+          <button class="bg-color-primary py-3 px-5 rounded-lg">Shop Now</button>
+        </div>
+        <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
           <a href="#slide2" class="btn btn-circle">❮</a>
-          <div class="text-white w-[550px] mx-auto text-center space-y-5 py-10">
-            <h1 class="lg:text-5xl  font-bold">3Exotic tastes at your doorstep</h1>
-            <p>We supply highly quality organic products</p>
-            <button class="bg-color-primary py-3 px-5 rounded-lg">Shop Now</button>
-          </div>
           <a href="#slide4" class="btn btn-circle">❯</a>
         </div>
       </div>
-      <!-- slider 4 -->
-      <div id="slide4"
-        class="carousel-item relative w-full bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.5)),url(./images/banner4.png)] bg-center bg-cover">
-
-        <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between items-center py-10">
+      <div id="slide4" class="carousel-item relative w-full bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.1)),url(./images/banner4.png)] h-[60vh] flex items-center justify-center bg-center bg-cover">
+        <div class="text-white  mx-auto text-center space-y-5 ">
+          <h1 class="lg:text-5xl text-3xl font-bold">1Exotic tastes at your <br> doorstep</h1>
+          <p class="w-2/3 mx-auto">We supply highly quality organic products</p>
+          <button class="bg-color-primary py-3 px-5 rounded-lg">Shop Now</button>
+        </div>
+        <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
           <a href="#slide3" class="btn btn-circle">❮</a>
-          <div class="text-white w-[550px] mx-auto text-center space-y-5 ">
-            <h1 class="lg:text-5xl   font-bold">4Exotic tastes at your doorstep</h1>
-            <p>We supply highly quality organic products</p>
-            <button class="bg-color-primary py-3 px-5 rounded-lg">Shop Now</button>
-          </div>
           <a href="#slide1" class="btn btn-circle">❯</a>
         </div>
       </div>
     </div>
-
-    <!-- free section-->
-    <div class="hidden lg:flex justify-around p-8 -mt-24 bg-white rounded-lg shadow-2xl max-w-7xl mx-36 z-20 relative">
+    <!-- free section -->
+    <div class="hidden lg:flex justify-around  p-8 -translate-y-24 bg-white rounded-lg shadow-2xl max-w-7xl mx-36 z-20 relative">
       <div class="text-center">
         <img src="./images/fruit1.png" alt="">
         <p>Graps</p>
@@ -172,9 +152,11 @@
         <p>Strawberry</p>
       </div>
     </div>
+    
+   
   </header>
 
-  <main class="max-w-7xl mx-auto lg:px-0 px-10">
+  <main class="max-w-7xl mx-auto lg:px-0 px-10 ">
     <!-- coundawn section -->
     <section class="flex lg:flex-row flex-col justify-between pt-20 gap-5">
 
